// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerScanStep should render cancelling screen 1`] = `
<div>
  <div
    class="space-y-8"
    data-testid="LedgerCancellingScreen"
  >
    <svg
      class="mx-auto max-w-full"
    >
      error-transaction-ledger-banner-light-green.svg
    </svg>
    <div
      class="inline-flex w-full items-center justify-center space-x-3"
    >
      <div
        class="css-i3nrbr"
        color="info"
      />
      <span
        class="animate-pulse font-semibold text-theme-secondary-text"
      >
        Cancelling Ledger Import, please wait...
      </span>
    </div>
  </div>
</div>
`;

exports[`LedgerScanStep should render compact table 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerScanStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Accounts
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the addresses that you want to import.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div
        data-testid="ImportWallet__network"
      >
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                type="text"
                value="ark.devnet"
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-90-menu"
              role="combobox"
            >
              <div>
                <label
                  for="downshift-90-input"
                  id="downshift-90-label"
                />
                <div
                  class="invisible fixed w-auto whitespace-nowrap"
                >
                  ARK Devnet
                  …
                </div>
                <div
                  class="css-n29l73"
                  disabled=""
                >
                  <div
                    aria-label="ARK Devnet"
                    class="flex items-center justify-center rounded-xl p-1 text-theme-secondary-700"
                  >
                    <div
                      class="css-v0ob3f"
                      data-testid="NetworkIcon__icon"
                      height="16"
                      width="16"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-90-menu"
                      aria-labelledby="downshift-90-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none text-theme-secondary-text css-1nupw50"
                      data-testid="SelectDropdown__input"
                      disabled=""
                      id="downshift-90-input"
                      name="network"
                      placeholder="Select option"
                      type="text"
                      value="ARK Devnet"
                    />
                    <span
                      class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                      data-testid="Input__suggestion"
                    >
                      <span
                        class="truncate"
                      >
                        ARK Devnet
                      </span>
                    </span>
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="downshift-90-label"
                id="downshift-90-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="-mt-3 css-1m6rt2i"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-1"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div
                  class=""
                >
                  <input
                    class="css-7i915u"
                    color="success"
                    data-testid="LedgerScanStep__select-all"
                    type="checkbox"
                  />
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Address
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="transition-transform rotate-180 css-15txs7d"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end flex-row-reverse"
              >
                <div
                  class=""
                >
                  Balance
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                >
                  <div
                    class="transition-transform rotate-180 css-15txs7d"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class=" css-1li86da"
            data-testid="TableRow"
          >
            <td>
              <div
                class="justify-center css-14huxtf"
              >
                <input
                  checked=""
                  class="css-7i915u"
                  color="success"
                  type="checkbox"
                />
              </div>
            </td>
            <td
              class="w-2/5"
            >
              <div
                class="space-x-4 css-1d4ra48"
              >
                <div
                  class="shrink-0 css-tthe5h"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="DQseW3VJ1db5xN5xZi4Qhn6AFWtcwSwzpG"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(156, 39, 176)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/></svg>"
                      title="DQseW3VJ1db5xN5xZi4Qhn6AFWtcwSwzpG"
                    />
                  </div>
                </div>
                <div
                  class="flex w-32 flex-1"
                >
                  <div
                    class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                      data-testid="Address__address"
                    >
                      DQseW3VJ1db5xN5xZi4Qhn6AFWtcwSwzpG
                    </span>
                  </div>
                </div>
                <span
                  class="hidden"
                >
                  m/44'/1'/0'/0/0
                </span>
              </div>
            </td>
            <td>
              <div
                class="justify-end font-semibold css-1hhowo0"
              >
                <div>
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 DARK
                  </span>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;

exports[`LedgerScanStep should render responsive (lg) 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerScanStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Accounts
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the addresses that you want to import.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div
        data-testid="ImportWallet__network"
      >
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                type="text"
                value="ark.devnet"
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-59-menu"
              role="combobox"
            >
              <div>
                <label
                  for="downshift-59-input"
                  id="downshift-59-label"
                />
                <div
                  class="invisible fixed w-auto whitespace-nowrap"
                >
                  ARK Devnet
                  …
                </div>
                <div
                  class="css-n29l73"
                  disabled=""
                >
                  <div
                    aria-label="ARK Devnet"
                    class="flex items-center justify-center rounded-xl p-1 text-theme-secondary-700"
                  >
                    <div
                      class="css-v0ob3f"
                      data-testid="NetworkIcon__icon"
                      height="16"
                      width="16"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-59-menu"
                      aria-labelledby="downshift-59-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none text-theme-secondary-text css-1nupw50"
                      data-testid="SelectDropdown__input"
                      disabled=""
                      id="downshift-59-input"
                      name="network"
                      placeholder="Select option"
                      type="text"
                      value="ARK Devnet"
                    />
                    <span
                      class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                      data-testid="Input__suggestion"
                    >
                      <span
                        class="truncate"
                      >
                        ARK Devnet
                      </span>
                    </span>
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="downshift-59-label"
                id="downshift-59-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="-mt-3 css-1m6rt2i"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-1"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div
                  class=""
                >
                  <input
                    class="css-7i915u"
                    color="success"
                    data-testid="LedgerScanStep__select-all"
                    type="checkbox"
                  />
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Address
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="transition-transform rotate-180 css-15txs7d"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end flex-row-reverse"
              >
                <div
                  class=""
                >
                  Balance
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                >
                  <div
                    class="transition-transform rotate-180 css-15txs7d"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class=" css-1li86da"
            data-testid="TableRow"
          >
            <td>
              <div
                class="justify-center css-mx19qq"
              >
                <input
                  checked=""
                  class="css-7i915u"
                  color="success"
                  type="checkbox"
                />
              </div>
            </td>
            <td
              class="w-2/5"
            >
              <div
                class="space-x-4 css-1rods8x"
              >
                <div
                  class="shrink-0 css-jxpwdn"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="DQseW3VJ1db5xN5xZi4Qhn6AFWtcwSwzpG"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(156, 39, 176)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/></svg>"
                      title="DQseW3VJ1db5xN5xZi4Qhn6AFWtcwSwzpG"
                    />
                  </div>
                </div>
                <div
                  class="flex w-32 flex-1"
                >
                  <div
                    class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                      data-testid="Address__address"
                    >
                      DQseW3VJ1db5xN5xZi4Qhn6AFWtcwSwzpG
                    </span>
                  </div>
                </div>
                <span
                  class="hidden"
                >
                  m/44'/1'/0'/0/0
                </span>
              </div>
            </td>
            <td>
              <div
                class="justify-end font-semibold css-br23tb"
              >
                <div>
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 DARK
                  </span>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;

exports[`LedgerScanStep should render responsive (xs) 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerScanStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Accounts
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the addresses that you want to import.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div
        data-testid="ImportWallet__network"
      >
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                type="text"
                value="ark.devnet"
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-28-menu"
              role="combobox"
            >
              <div>
                <label
                  for="downshift-28-input"
                  id="downshift-28-label"
                />
                <div
                  class="invisible fixed w-auto whitespace-nowrap"
                >
                  ARK Devnet
                  …
                </div>
                <div
                  class="css-n29l73"
                  disabled=""
                >
                  <div
                    aria-label="ARK Devnet"
                    class="flex items-center justify-center rounded-xl p-1 text-theme-secondary-700"
                  >
                    <div
                      class="css-v0ob3f"
                      data-testid="NetworkIcon__icon"
                      height="16"
                      width="16"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-28-menu"
                      aria-labelledby="downshift-28-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none text-theme-secondary-text css-1nupw50"
                      data-testid="SelectDropdown__input"
                      disabled=""
                      id="downshift-28-input"
                      name="network"
                      placeholder="Select option"
                      type="text"
                      value="ARK Devnet"
                    />
                    <span
                      class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                      data-testid="Input__suggestion"
                    >
                      <span
                        class="truncate"
                      >
                        ARK Devnet
                      </span>
                    </span>
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="downshift-28-label"
                id="downshift-28-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="-mt-3 css-1m6rt2i"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-1"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div
                  class=""
                >
                  <input
                    class="css-7i915u"
                    color="success"
                    data-testid="LedgerScanStep__select-all"
                    type="checkbox"
                  />
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Address
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="transition-transform rotate-180 css-15txs7d"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end flex-row-reverse"
              >
                <div
                  class=""
                >
                  Balance
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                >
                  <div
                    class="transition-transform rotate-180 css-15txs7d"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class=" css-1li86da"
            data-testid="TableRow"
          >
            <td>
              <div
                class="justify-center css-mx19qq"
              >
                <input
                  checked=""
                  class="css-7i915u"
                  color="success"
                  type="checkbox"
                />
              </div>
            </td>
            <td
              class="w-2/5"
            >
              <div
                class="space-x-4 css-1rods8x"
              >
                <div
                  class="shrink-0 css-jxpwdn"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="DQseW3VJ1db5xN5xZi4Qhn6AFWtcwSwzpG"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(156, 39, 176)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/></svg>"
                      title="DQseW3VJ1db5xN5xZi4Qhn6AFWtcwSwzpG"
                    />
                  </div>
                </div>
                <div
                  class="flex w-32 flex-1"
                >
                  <div
                    class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                      data-testid="Address__address"
                    >
                      DQseW3VJ1db5xN5xZi4Qhn6AFWtcwSwzpG
                    </span>
                  </div>
                </div>
                <span
                  class="hidden"
                >
                  m/44'/1'/0'/0/0
                </span>
              </div>
            </td>
            <td>
              <div
                class="justify-end font-semibold css-br23tb"
              >
                <div>
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 DARK
                  </span>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;
